@@ -15,7 +15,6 @@
 defined('_JEXEC') or die;
 
 jimport('joomla.application.component.view');
-jimport('joomla.filesystem.file');
 
 /**
  * Podcast edit view class.
