@@ -91,7 +91,6 @@ class PodcastMediaController extends JController
 	function ftpValidate()
 	{
 		// Set FTP credentials, if given
-		jimport('joomla.client.helper');
 		JClientHelper::setCredentialsFromRequest('ftp');
 	}
 }
