@@ -1,3 +1,6 @@
+29-November-2011 Michael Babker
+- Remove jimport calls supported by autoloader
+
 15-November-2011 Michael Babker
 - Remove cache option for RSS feed
 
